Revision history for Graph::Easy (formerly known as Graph::Simple):

2014-04-10 v0.74 Shlomi Fish 2938 tests
  * Remove leftover files from the MANIFEST (CPANTS error).
  * All the versions of the .pm files are now consistent (CPANTS error).
    - Add scripts/bump-version-number.pl to facilitate that.
  * Add "use warnings;" to all modules (CPANTS error).

2013-05-25 v0.73 Shlomi Fish 2938 tests
  * Got the tests to pass on perl-5.18.0 (and hopefully above).
    - Done by making sure hash traversals (each/keys/values) are only
    done by lexicographical order of the keys.

2012-10-20 v0.72 Shlomi Fish 2938 tests
  * Update Module-Install from version 1.04 (which is broken on perl-5.16.x).
    - http://weblog.bulknews.net/post/33907905561/do-not-ship-modules-with-module-install-1-04
    - Thanks to MIYAGAWA for the report.

2011-12-23 v0.71 Shlomi Fish 2938 tests
  * Fix the SIGNATURE file.
    - https://rt.cpan.org/Ticket/Display.html?id=58892
    - Thanks to ANDK for reporting it.

2010-11-05 v0.70 Shlomi Fish
  * Fix "GraphML: end tag of nodes before definition of their attributes"
    - https://rt.cpan.org/Public/Bug/Display.html?id=46992
    - Thanks to a patch by ironcamel ( https://github.com/ironcamel )
  * Got rid of a warning in recent Perls for doing tr/\t/ /d due to /d
  being usless in that case.

2010-07-01 v0.69 Shlomi Fish 2938 tests
  * Add support for GraphViz subgraphs.
    - Thanks to a patch by Yves Agostini ( http://www.crium.univ-metz.fr/ )

2010-06-28 v0.68 Shlomi Fish 2933 tests
  * Add .*\.swp to the MANIFEST.SKIP in order to skip vim temporary files.
  * Fixed the signature file.
    - https://rt.cpan.org/Ticket/Display.html?id=58892
    - Thanks to Andreas Koenig (ANDK).

2010-05-28 v0.67 Shlomi Fish 2933 tests
  * Fix the as_vcg() vs. as_vcg_file() test that sometimes failed due
  to timestamp offsets in both files.
    - See: http://www.cpantesters.org/cpan/report/07338331-b19f-3f77-b713-d32bba55d77f
