@@ -5,6 +5,7 @@ Revision history for Graph::Easy (formerly known as Graph::Simple):
   * All the versions of the .pm files are now consistent (CPANTS error).
     - Add scripts/bump-version-number.pl to facilitate that.
   * Add "use warnings;" to all modules (CPANTS error).
+  * Convert to Build.PL and Module::Build for "provides" (CPANTS error).
 
 2013-05-25 v0.73 Shlomi Fish 2938 tests
   * Got the tests to pass on perl-5.18.0 (and hopefully above).
